[package]
name = "pym-disk"
version = "0.1.0"
authors = ["ben <007vasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_ec2 = "0.45.0"
rusoto_core = "0.45.0"
uuid = { version = "0.8", features = ["v4"] }