[package]
name = "pym-disk"
version = "0.1.0"
authors = ["ben <007vasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_ec2 = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_core = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_credential = { version = "0.45.0", default_features = false }
rusoto_sts = { version = "0.45.0", default_features = false, features=["rustls"] }
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "0.2.22", features = ["full"] }    
sysinfo = "0.15.3"